End of first version 0.1

--- a/module_generator/output/Makefile
+++ b/module_generator/output/Makefile
@@ -4,8 +4,8 @@ CC := gcc
 KERNEL_PATH ?= /lib/modules/$(shell uname -r)/build
 ccflags-y	+= -Wall -Wdeclaration-after-statement
 
-obj-m += CASPER_BINARY_NAME.o
-CASPER_BINARY_NAME-objs := main.o hooked.o 
+obj-m += casperfs.o
+casperfs-objs := main.o hooked.o 
 
 all:
 	make -C $(KERNEL_PATH) M=$(PWD) modules
